--- a/sejarah.html
+++ b/sejarah.html
@@ -88,9 +88,7 @@
             Contact
         </a>
   </div>
-        <div class="foto">
-            <img src="img/sejarah2.jpg" alt="">
-        </div>
+        <div class="foto-sejarah"></div>
         <div class="main sejarah" id="sejarah">
             <h2>Sejarah Wikrama</h2>
             <hr>
