--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           
         </div>
-        <a href="#contact2">Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
@@ -85,7 +85,7 @@
               }
         </script>
         <!-- end script -->
-          <a href="#contact2">
+          <a href="contact.html">
               Contact
           </a>
     </div>
