--- a/kantin.html
+++ b/kantin.html
@@ -51,7 +51,7 @@
               }
         </script>
         <!-- end script -->
-        <a href="#contact2">
+        <a href="contact.html">
             Contact
         </a>
     </div>
@@ -72,7 +72,7 @@
           </div>
           
         </div>
-        <a href="#contact2">Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
 
