--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
             <a href="kantin.html">Kantin Wikrama</a>
             <a href="perpus.html">Perpustakaan Wikrama</a>
           </div>
-          
+
         </div>
+        <a href="jurusan.html">Jurusan</a>
         <a href="contact.html">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
@@ -62,9 +63,10 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container one">
-            <a href="#">Lorem ipsum</a>
-            <a href="#">Lorem ipsum</a>
-            <a href="#">Lorem ipsum</a>
+            <a href="jurusan.html#RPL">Rekayasa Perangkat Lunak</a>
+            <a href="jurusan.html#otkp">Otomatisasi dan Tata Kelola Perkantoran</a>
+            <a href="jurusan.html#tkj">Teknik Komputer dan Jaringan</a>
+            <a href="#">Lorem Ipsum</a>
           </div>
           
         <!-- script -->
