--- a/kantin.html
+++ b/kantin.html
@@ -28,9 +28,10 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-container one">
-            <a href="#">Lorem ipsum</a>
-            <a href="#">Lorem ipsum</a>
-            <a href="#">Lorem ipsum</a>
+            <a href="jurusan.html#RPL">Rekayasa Perangkat Lunak</a>
+            <a href="jurusan.html#otkp">Otomatisasi dan Tata Kelola Perkantoran</a>
+            <a href="jurusan.html#tkj">Teknik Komputer dan Jaringan</a>
+            <a href="#">Lorem Ipsum</a>
           </div>
           
         <!-- script -->
