--- a/kantin.html
+++ b/kantin.html
@@ -73,6 +73,7 @@
           </div>
           
         </div>
+        <a href="jurusan.html">Jurusan</a>
         <a href="contact.html">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
