--- a/sejarah.html
+++ b/sejarah.html
@@ -25,6 +25,7 @@
           </div>
           
         </div>
+        <a href="jurusan.html">Jurusan</a>
         <a href="contact.html">Contact</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </div>
