memperbaiki bug di tampilan mobile

--- a/jurusan.html
+++ b/jurusan.html
@@ -398,7 +398,7 @@
         </div>
     </div>
     
-    <div class="contact2" id="contact2">
+    <div class="contact2" id="contact2" style="top: 0;">
         <div class="contact-info">
             <h3>CONTACT INFO</h3>
             <br><br>
@@ -461,7 +461,7 @@
         <div class="clear"></div>
     </div>
 
-    <footer>
+    <footer style="top: 0;">
         <p>Copyright ©2021 M.Yazid A</p>
     </footer>
 </body>
